--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "test/testname",
+    "name": "test5585545/testname",
     "description": "feflkjewhv",
     "type": "library",
     "license": "MIT",
