--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "test5585545/testname",
     "description": "feflkjewhv",
     "type": "library",
+    "version": 1.0.0,
     "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
